--- a/html-forms/autocomplete/task.html
+++ b/html-forms/autocomplete/task.html
@@ -26,7 +26,7 @@
             <div class="autocomplete">
                 <div class="autocomplete__helper">
                     <div class="autocomplete__value">
-                        <div class="autocomplete__text-content">Чебурашка</div>
+                        <div class="autocomplete__text-content">Ч</div>
                         <input type="text" name="" class="autocomplete__search" placeholder="Поиск">
                     </div>
                     <ul class="autocomplete__list"></ul>
@@ -36,6 +36,12 @@
                     <option value="2">Чебоксары</option>
                     <option value="3">Чемодан</option>
                     <option value="4">Чебурек</option>
+                    <option value="5">Человек</option>
+                    <option value="6">Чекбокс</option>
+                    <option value="7">Чеботарь</option>
+                    <option value="8">Чебрец</option>
+                    <option value="9">Чебуратор</option>
+                    <option value="10">Чек</option>
                 </select>
             </div>
         </div>
