--- a/client-state/text-editor/task.html
+++ b/client-state/text-editor/task.html
@@ -22,7 +22,7 @@
         <div class="card">
             <textarea id="editor" cols="30" rows="10"></textarea>
             <button class="clear_button">Очистить локальное хранилище</button>
-            <button class="delete_button">Удалить <span class="attention">все</span> содержимое локального хранилича!</button>
+            <button class="delete_button">Удалить <span class="attention">все</span> содержимое локального хранилища!</button>
         </div>
     </main>    
     <script src="task.js"></script>
